use pre-filtered NameMap in AddressRow